--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -17,12 +18,6 @@
         "phpunit/phpunit": "~6.0",
         "nullx27/eveonline-socialite": "*"
     },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../eveonline-socialite"
-        }
-    ],
 
     "autoload": {
         "classmap": [
