--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bootstrap": "4.0.0-alpha.6",
+        "font-awesome": "^4.7.0",
         "tether": "^1.4.3"
     }
 }
