--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1",
-        "watson/active": "^2.0"
+        "watson/active": "^2.0",
+        "nullx27/easi": "^1.2.4"
+
     },
     "require-dev": {
         "filp/whoops": "~2.0",
