--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "bootstrap": "4.0.0-alpha.6",
         "font-awesome": "^4.7.0",
+        "select2": "^4.0.6-rc.1",
         "tether": "^1.4.3"
     }
 }
