--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,9 @@ DISCORD_KEY=yourkeyfortheservice
 DISCORD_SECRET=yoursecretfortheservice
 DISCORD_REDIRECT_URI=https://example.com/login
 
+DISCORD_BOT_TOKEN=
+DISCORD_GUILD_ID=
+
 REDDIT_KEY=yourkeyfortheservice
 REDDIT_SECRET=yoursecretfortheservice
 REDDIT_REDIRECT_URI=https://example.com/login
