--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "madewithlove/illuminate-psr-cache-bridge": "^1.0",
         "nullx27/conduit": "dev-master",
         "predis/predis": "^1.1",
+        "restcord/restcord": "^0.1.4",
         "silber/bouncer": "v1.0.0-beta.5",
         "socialiteproviders/discord": "^2.0",
         "socialiteproviders/reddit": "^3.0",
