--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,20 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "league/oauth2-client": "^2.3",
         "madewithlove/illuminate-psr-cache-bridge": "^1.0",
         "nullx27/conduit": "dev-master",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.1.4",
+        "rtheunissen/oauth2-reddit": "^2.0",
         "silber/bouncer": "v1.0.0-beta.5",
         "socialiteproviders/discord": "^2.0",
         "socialiteproviders/reddit": "^3.0",
+        "softonic/guzzle-oauth2-middleware": "^1.1",
         "watson/active": "^2.0"
     },
     "require-dev": {
