--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "dependencies": {
         "bootstrap": "^4.0.0",
         "font-awesome": "^4.7.0",
+        "image-webpack-loader": "^4.1.0",
+        "pngquant": "^1.3.0",
         "popper.js": "^1.12.9",
+        "sass-inline-image": "^0.0.3",
         "select2": "^4.0.6-rc.1",
         "tether": "^1.4.3"
     }
