--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+
     "require": {
         "php": ">=7.0.0",
         "eyewitness/eye": "dev-beta",
@@ -14,7 +15,7 @@
         "laravel/tinker": "~1.0",
         "league/oauth2-client": "^2.3",
         "madewithlove/illuminate-psr-cache-bridge": "^1.0",
-        "nullx27/conduit": "dev-master",
+        "nullx27/conduit": "*",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.1.4",
         "rtheunissen/oauth2-reddit": "^2.0",
@@ -22,7 +23,8 @@
         "socialiteproviders/discord": "^2.0",
         "socialiteproviders/reddit": "^3.0",
         "softonic/guzzle-oauth2-middleware": "^1.1",
-        "watson/active": "^2.0"
+        "watson/active": "^2.0",
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -36,12 +38,7 @@
     "repositories": [
         {
             "type": "path",
-            "url": "/home/necro/code/easi"
-        },
-
-        {
-            "type": "path",
-            "url": "/home/necro/code/esi-php"
+            "url": "/home/apeiffer/sdk/conduit"
         }
     ],
 
