--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "bootstrap": "^4.0.0",
+        "datatables": "^1.10.13",
+        "datatables.net-bs4": "^1.10.16",
         "font-awesome": "^4.7.0",
         "image-webpack-loader": "^4.1.0",
         "pngquant": "^1.3.0",
