--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "@fortawesome/fontawesome": "^1.1.4",
+        "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
         "bootstrap": "^4.0.0",
         "datatables": "^1.10.13",
         "datatables.net-bs4": "^1.10.16",
-        "font-awesome": "^4.7.0",
         "image-webpack-loader": "^4.1.0",
         "pngquant": "^1.3.0",
         "popper.js": "^1.12.9",
