--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "datatables": "^1.10.13",
         "datatables.net-bs4": "^1.10.16",
         "image-webpack-loader": "^4.1.0",
+        "jquery-ui-dist": "^1.12.1",
         "pngquant": "^1.3.0",
         "popper.js": "^1.12.9",
         "sass-inline-image": "^0.0.3",
