--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "vue-resource": "^1.0.3"
     },
     "dependencies": {
         "@fortawesome/fontawesome": "^1.1.4",
         "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
         "bootstrap": "^4.0.0",
+        "clipboard": "^2.0.0",
         "datatables": "^1.10.13",
         "datatables.net-bs4": "^1.10.16",
+        "flatpickr": "^4.3.2",
         "image-webpack-loader": "^4.1.0",
         "jquery-ui-dist": "^1.12.1",
+        "moment": "^2.21.0",
         "pngquant": "^1.3.0",
         "popper.js": "^1.12.9",
         "sass-inline-image": "^0.0.3",
