--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "bootstrap": "^4.0.0",
         "clipboard": "^2.0.0",
         "datatables": "^1.10.13",
+        "datatables.net": "^1.10.16",
         "datatables.net-bs4": "^1.10.16",
         "flatpickr": "^4.3.2",
         "image-webpack-loader": "^4.1.0",
+        "imports-loader": "^0.8.0",
         "jquery-ui-dist": "^1.12.1",
         "moment": "^2.21.0",
         "pngquant": "^1.3.0",
