--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "type": "project",
 
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1.0",
         "eyewitness/eye": "dev-beta",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "league/oauth2-client": "^2.3",
         "madewithlove/illuminate-psr-cache-bridge": "^1.0",
@@ -19,13 +19,13 @@
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.1.4",
         "rtheunissen/oauth2-reddit": "^2.0",
-        "silber/bouncer": "v1.0.0-beta.5",
+        "silber/bouncer": "v1.0.0-rc.1",
         "socialiteproviders/discord": "^2.0",
         "socialiteproviders/reddit": "^3.0",
         "softonic/guzzle-oauth2-middleware": "^1.1",
+        "vinkla/hashids": "5.0.0",
         "watson/active": "^2.0",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "vinkla/hashids": "3.3.0"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -34,7 +34,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "nullx27/eveonline-socialite": "*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~7.0"
     },
 
     "repositories": [
@@ -78,8 +78,7 @@
         ],
         "post-update-cmd": [
             "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta",
-            "php artisan optimize"
+            "php artisan ide-helper:meta"
         ]
     },
     "config": {
