--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,9 +1,11 @@
 [program:asgard-worker]
+command=php /home/forge/app.com/artisan queue:work --queue=high,medium,low,default --tries 1
 process_name=%(program_name)s_%(process_num)02d
-command=php /home/forge/app.com/artisan queue:work redis --sleep=3 --tries=3
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+numprocs=4
 autostart=true
 autorestart=true
 user=forge
-numprocs=4
 redirect_stderr=true
 stdout_logfile=/home/forge/app.com/worker.log
