--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,16 @@
 
     "require": {
         "php": ">=7.1.0",
-        "eyewitness/eye": "dev-beta",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.6.*",
+        "laravel/horizon": "^1.2",
         "laravel/tinker": "~1.0",
         "league/oauth2-client": "^2.3",
         "madewithlove/illuminate-psr-cache-bridge": "^1.0",
         "nullx27/conduit": "*@dev",
+        "nullx27/eveonline-socialite": "*",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.1.4",
         "rtheunissen/oauth2-reddit": "^2.0",
@@ -33,17 +34,8 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "nullx27/eveonline-socialite": "*",
         "phpunit/phpunit": "~7.0"
     },
-
-    "repositories": [
-        {
-            "type": "path",
-            "url": "/home/apeiffer/sdk/conduit"
-        }
-    ],
-
     "autoload": {
         "classmap": [
             "database/seeds",
