--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,11 +1,8 @@
-[program:asgard-worker]
-command=php /home/forge/app.com/artisan queue:work --queue=high,medium,low,default --tries 1
-process_name=%(program_name)s_%(process_num)02d
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=10
-numprocs=4
+[program:horizon]
+process_name=%(program_name)s
+command=php /home/forge/app.com/artisan horizon
 autostart=true
 autorestart=true
 user=forge
 redirect_stderr=true
-stdout_logfile=/home/forge/app.com/worker.log
+stdout_logfile=/home/forge/app.com/horizon.log
