--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ DISCORD_GUILD_ID=
 REDDIT_KEY=yourkeyfortheservice
 REDDIT_SECRET=yoursecretfortheservice
 REDDIT_REDIRECT_URI=https://example.com/login
+
+
+ASGARD_OPEN_REGISTRATION=true
