--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,6 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-
 EVEONLINE_CLIENT_ID=
 EVEONLINE_CLIENT_SECRET=
 EVEONLINE_REDIRECT=http://localhost/eve/callback
@@ -46,5 +45,8 @@ REDDIT_KEY=yourkeyfortheservice
 REDDIT_SECRET=yoursecretfortheservice
 REDDIT_REDIRECT_URI=https://example.com/login
 
-
 ASGARD_OPEN_REGISTRATION=true
+
+ASGARD_SDE_VERSION="sde-20180323-TRANQUILITY"
+ASGARD_SDE_TABLES=invCategories,invFlags,invGroups,invItems,invMarketGroups,invMetaGroups,invMetaTypes,invNames,invPositions,invTypes,invUniqueNames,mapDenormalize,mapSolarSystems
+
