--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fortawesome/fontawesome": "^1.1.4",
         "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
         "bootstrap": "^4.0.0",
+        "bootswatch": "^4.1.1",
         "chart.js": "^2.7.2",
         "clipboard": "^2.0.0",
         "datatables": "^1.10.13",
