--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "madewithlove/illuminate-psr-cache-bridge": "^1.0",
         "nullx27/conduit": "*@dev",
         "nullx27/eveonline-socialite": "*",
+        "pragmarx/version": "^0.2.7",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.1.4",
         "rtheunissen/oauth2-reddit": "^2.0",
@@ -31,7 +32,6 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
-        "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
@@ -71,10 +71,6 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ],
-        "post-update-cmd": [
-            "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta"
         ]
     },
     "config": {
