--- a/config/version.yml
+++ b/config/version.yml
@@ -5,13 +5,13 @@ current:
   minor: 0
   patch: 0
   format: "{$major}.{$minor}.{$patch}"
-  git_absorb: false # "false", "git-local" or "git-remote"
+  git_absorb: git-local # "false", "git-local" or "git-remote"
 cache:
   enabled: true
   key: pragmarx-version
   time: 525600 #minutes = 1 year
 build:
-  mode: number # "number", "git-local" or "git-remote"
+  mode: git-local # "number", "git-local" or "git-remote"
   number: 701031
   length: 6
   increment_by: 1
