--- a/config/version.yml
+++ b/config/version.yml
@@ -15,7 +15,7 @@ build:
   number: 701031
   length: 6
   increment_by: 1
-  git_absorb: false # "false", "git-local" or "git-remote"
+  git_absorb: git-local # "false", "git-local" or "git-remote"
 git:
   git-local: "git rev-parse --verify HEAD"
   git-remote: "git ls-remote {$repository}"
@@ -24,7 +24,7 @@ git:
   version:
     git-local: "git describe"
     git-remote: "git ls-remote {$repository} | grep tags/ | grep -v {} | cut -d \/ -f 3 | sort --version-sort | tail -1"
-    matcher: "/[V|v]*[ersion]*\\s*\\.*(\\d+)\\.(\\d+)\\.(\\d+)\\.*(\\w*)/"
+    matcher: "/[V|v]*[ersion]*\\s*\\.*(\\d+)\\.(\\d+)\\.(\\d+)\\.*(\\w*).+\\w/"
 format:
   major: "{$major}"
   minor: "{$minor}"
