--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="ASGARD"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -31,7 +31,7 @@ MAIL_ENCRYPTION=null
 
 EVEONLINE_CLIENT_ID=
 EVEONLINE_CLIENT_SECRET=
-EVEONLINE_REDIRECT=http://localhost/eve/callback
+EVEONLINE_REDIRECT=https://asgard.test/eve/callback
 EVEONLINE_SCOPES=esi-calendar.read_calendar_events.v1,esi-location.read_location.v1,esi-location.read_ship_type.v1,esi-mail.organize_mail.v1,esi-mail.read_mail.v1,esi-mail.send_mail.v1,esi-skills.read_skills.v1,esi-skills.read_skillqueue.v1,esi-wallet.read_character_wallet.v1,esi-search.search_structures.v1,esi-clones.read_clones.v1,esi-characters.read_contacts.v1,esi-bookmarks.read_character_bookmarks.v1,esi-assets.read_assets.v1,esi-characters.read_loyalty.v1,esi-characters.read_chat_channels.v1,esi-characters.read_medals.v1,esi-characters.read_standings.v1,esi-industry.read_character_jobs.v1,esi-markets.read_character_orders.v1,esi-location.read_online.v1,esi-contracts.read_character_contracts.v1,esi-clones.read_implants.v1,esi-characters.read_fatigue.v1,esi-characters.read_notifications.v1,esi-industry.read_character_mining.v1,esi-characters.read_titles.v1,esi-characters.read_fw_stats.v1,esi-characterstats.read.v1,esi-characters.read_corporation_roles.v1
 
 DISCORD_KEY=yourkeyfortheservice
