--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
-
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=7.1.0",
         "fideloper/proxy": "~4.0",
@@ -18,7 +19,7 @@
         "nullx27/conduit": "*@dev",
         "nullx27/eveonline-socialite": "*",
         "predis/predis": "^1.1",
-        "restcord/restcord": "^0.1.4",
+        "restcord/restcord": "dev-master",
         "rtheunissen/oauth2-reddit": "^2.0",
         "silber/bouncer": "v1.0.0-rc.1",
         "socialiteproviders/discord": "^2.0",
