--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "socialiteproviders/reddit": "^3.0",
         "softonic/guzzle-oauth2-middleware": "^1.1",
         "spatie/laravel-activitylog": "^2.7",
+        "spatie/laravel-backup": "^5.9",
         "vinkla/hashids": "5.0.0",
         "watson/active": "^2.0",
         "yajra/laravel-datatables-oracle": "~8.0"
