--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.1.0",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.0",
