--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "softonic/guzzle-oauth2-middleware": "^1.1",
         "spatie/laravel-activitylog": "^2.7",
         "spatie/laravel-backup": "^5.9",
-        "vinkla/hashids": "5.0.0",
+        "vinkla/hashids": "^5.0",
         "watson/active": "^2.0",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
