Updated .env example

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ EVEONLINE_SCOPES=esi-calendar.respond_calendar_events.v1,esi-calendar.read_calen
 
 DISCORD_KEY=yourkeyfortheservice
 DISCORD_SECRET=yoursecretfortheservice
-DISCORD_REDIRECT_URI=https://example.com/login
+DISCORD_REDIRECT_URI=http://this.site/services/discord/callback
 
 DISCORD_BOT_TOKEN=
 DISCORD_GUILD_ID=
