--- a/docker/config/supervisor.conf
+++ b/docker/config/supervisor.conf
@@ -6,3 +6,21 @@ autorestart=true
 user=www-data
 redirect_stderr=true
 stdout_logfile=/var/log/horizon.log
+
+[program:fpm]
+process_name=%(program_name)s
+command=php-fpm
+autostart=true
+autorestart=true
+user=www-data
+redirect_stderr=true
+stdout_logfile=/var/log/fpm.log
+
+[program:fpm]
+process_name=%(program_name)s
+command=cron
+autostart=true
+autorestart=true
+user=root
+redirect_stderr=true
+stdout_logfile=/var/log/cron.log
