--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "moment": "^2.21.0",
         "pngquant": "^1.3.0",
         "popper.js": "^1.12.9",
-        "sass-inline-image": "^0.0.3",
+        "@behance/sass-inline-image": "^1.0.0",
         "select2": "^4.0.6-rc.1",
         "tether": "^1.4.3"
     }
